app/assets/stylesheets/hope-ui/components/nav/_navbar.scss
.nav {
    background: var(--bs-gray-900);

    .navbar-inner {
        padding: 0 calc(var(--bs-gutter-x, .75rem) * 2);
    }

    .navbar-nav {
        .dropdown {
            position: relative;
        }

        .dropdown-menu {
            position: absolute;
            z-index: 1000;
        }
    }

    .search-input {
        width: auto;

        &.input-group {
            .input-group-text {
                padding-right: 0;
                border-right: 0;
            }

            .form-control {
                border-left: 0;

                &:focus {
                    box-shadow: unset;
                    border-color: $input-border-color;
                }
            }

            &:focus-within {

                .input-group-text,
                .form-control {
                    border-color: $input-focus-border-color;
                }
            }
        }
    }

    .navbar-brand {
        display: flex;
        align-items: center;

        .logo-title {
            margin-left: $spacer;
            color: var(--bs-heading-color);
            margin-bottom: 0;
            z-index: 1;
        }
    }

    .sidebar-toggle {
        height: 26px;
        width: 26px;
        line-height: 19px;
        text-align: center;
        position: absolute;
        left: 20px;
        right: auto;
        top: auto;
        cursor: pointer;
        background: var(--bs-primary);
        color: $white;
        z-index: 900 + 11;
        display: none;
        padding: 0.2rem;
        border-radius: $border-radius-pill;

        @if $enable-shadows ==true {
            box-shadow: $component-active-shadow;
        }
    }

    .navbar-toggler {
        .navbar-toggler-icon {
            background-image: none;

            .navbar-toggler-bar {
                display: block;
                position: relative;
                width: 22px;
                height: 1px;
                border-radius: 1px;
                background: var(--bs-body-color);
                transition: all 400ms ease;
                margin: 0 auto;
            }

            .navbar-toggler-bar.bar2 {
                margin-top: 7px;
            }

            .navbar-toggler-bar.bar3 {
                margin-top: 7px;
            }
        }
    }

    .navbar-toggler[aria-expanded=true] {
        .navbar-toggler-bar.bar1 {
            transform: rotate(45deg);
            transform-origin: 10% 10%;
            margin-top: 4px;
        }

        .navbar-toggler-bar.bar2 {
            opacity: 0;
        }

        .navbar-toggler-bar.bar3 {
            transform: rotate(-45deg);
            transform-origin: 10% 90%;
            margin-top: 3px;
        }
    }


}

//navbar color
.iq-navbar.navs-color {
    background: var(--bs-primary);

    .navbar-nav {
        .nav-item {
            .nav-link {
                color: var(--bs-white);
            }
        }
    }
}

//navbar transparent
.iq-navbar.navs-transparent {
    background-color: rgba(255, 255, 255, 0);
}

.iq-navbar {
    z-index: 900 - 11;

    &.nav-glass {
        background: linear-gradient(120deg, rgba($white, 0.5) -8%, rgba($white, 0.01) 120%);
        backdrop-filter: blur(10px);
        border-bottom: $border-width solid $white;

        .navbar-nav {
            @include top-nav-link;
        }
    }

    &.navbar-expand-lg {
        &.navs-transparent {
            background: transparent;
            @include top-nav-link;
        }
    }

    &.navs-sticky {
        position: sticky;
        top: 0;
        width: 100%;

        &.menu-sticky {
            position: fixed !important;
            top: 0;
            transition: all 400ms ease;
        }
    }

    .dropdown {
        .dropdown-menu[data-bs-popper] {
            top: 100%;
            -webkit-animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
            animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
        }

        .dropdown-menu {
            &.sub-drop {
                width: 300px;
                border-radius: $border-radius-lg;
                -webkit-animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
                animation: fade-in-bottom 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;

                li {
                    a {
                        color: var(--bs-body-color);
                    }
                }

                .iq-sub-card {
                    cursor: pointer;
                    padding: .75rem 1.25rem !important;
                    display: inline-block;
                    width: 100%;
                    color: var(--bs-body-color);
                    transition: all 400ms ease;

                    &:hover {
                        background: var(--#{$variable-prefix}primary-tint-90);
                    }

                    &:not(:last-child) {
                        border-bottom: $border-width solid var(--bs-border-color);
                    }

                    &:last-child {
                        border-bottom-left-radius: $border-radius;
                        border-bottom-right-radius: $border-radius;
                    }
                }
            }
        }
    }
}

.iq-navbar-header {
    .iq-header-img {
        overflow: hidden;
        border-radius: $border-radius-lg;

        img {
            object-fit: cover;
        }
    }

    &.navs-bg-color {
        .iq-header-img {
            background: $primary;

            img {
                display: none;
            }
        }
    }
}
/* ... */

